Bugfixes and minor improvements - too many entries in a folder no longer break footer - bookmarks moved above folders - bookmarks and folders are now separated with a line - new scrollbar style

--- a/styles/design.css
+++ b/styles/design.css
@@ -1,73 +1,35 @@
 /* ------------------------------------------------- */
 /* Body */
-body {
-    background: #F2F2F2;
-}
+body { background: #F2F2F2; }
 
 /* ------------------------------------------------- */
 /* App */
-div#app {
-    background: #F2F2F2;
-    color: #555;
-    padding: 20px;
-    overflow: hidden;
-    width: 300px;
-}
+div#app { background: #F2F2F2; color: #555; padding: 20px; overflow: hidden; width: 300px; }
 
 /* ------------------------------------------------- */
 /* Header */
-div#app header {
-    height: 32px;
-    margin: 0 0 15px 0;
-}
-div#app header div {
-    display: inline-block;
-    vertical-align: middle;
-    height: 32px;
-}
-div#app header button {
-    display: inline-block;
-    margin: 0 10px 0 0;
-    vertical-align: middle;
-}
-div#app header span {
-    display: inline-block;
-    font-size: 1.4em;
-    font-weight: bold;
-    vertical-align: middle;
-}
+div#app header { height: 32px; margin: 0 0 15px 0; }
+div#app header div { display: inline-block; vertical-align: middle; height: 32px; }
+div#app header button { display: inline-block; margin: 0 10px 0 0; vertical-align: middle; }
+div#app header span { display: inline-block; font-size: 1.4em; font-weight: bold; vertical-align: middle; }
 
 /* ------------------------------------------------- */
 /* Content */
-div#content {
-    height: 300px;
-}
-div#content a {
-    border-radius: 5px 5px 5px 5px;
-    color: #555;
-    cursor: pointer;
-    display: block;
-    padding: 3px 10px;
-    transition: .2s ease;
-}
-div#content a:hover {
-    background: #E5E5E5;
-    font-weight: bold;
-}
-div#content a div.favicon {
-    float: left;
-    padding: 0 10px 0 0;
-}
-div#content a div.favicon img {
-    margin: 0 0 3px 0;
-}
-div#content a div.title {
-    float: left;
-}
-div#content a div.clear {
-    clear: both;
-}
+div#content { height: 300px; overflow: auto; }
+div#content a { border-radius: 5px 5px 5px 5px; color: #555; cursor: pointer; display: block; padding: 3px 10px; transition: .2s ease; }
+div#content a:hover { background: #E5E5E5; font-weight: bold; }
+div#content a div.favicon { float: left; padding: 0 10px 0 0; }
+div#content a div.favicon img { margin: 0 0 3px 0; }
+div#content a div.title { float: left; }
+div#content a div.clear { clear: both; }
+div#content hr { margin: 10px 0; }
 
 /* ------------------------------------------------- */
 /* Footer */
 div#app footer { margin: 30px 0 0 0; text-align: right; }
+
+/* ------------------------------------------------- */
+/* Scrollbar */
+::-webkit-scrollbar { background: transparent; width: 3px; }
+::-webkit-scrollbar-button { background: transparent; height: 0px; }
+::-webkit-scrollbar-thumb { background: #999; cursor: pointer; }
